<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:textSize="24sp"
        android:padding="16dp"
        android:layout_margin="20dp"
        android:text="@string/question"
        android:background="@color/orange_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answer_button_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:text="@string/answer_1"
        android:background="@color/indigo_500"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text" />

    <Button
        android:id="@+id/answer_button_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:text="@string/answer_2"
        android:background="@color/indigo_500"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_button_1" />

    <Button
        android:id="@+id/answer_button_3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:text="@string/answer_3"
        android:background="@color/indigo_500"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_button_2" />

    <Button
        android:id="@+id/answer_button_4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:text="@string/answer_4"
        android:background="@color/indigo_500"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_button_3" />

</androidx.constraintlayout.widget.ConstraintLayout>
